docs: add documentacao para show
